--- a/Dartboard.GUI/Web/index.html
+++ b/Dartboard.GUI/Web/index.html
@@ -4,8 +4,24 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        img {
+            padding: 0;
+            display: block;
+            margin: 0 auto;
+            max-height: 100%;
+            max-width: 100%;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    <h1>this is a test</h1>
+    <img src="http://129.25.217.182:8081/?action=stream_0"/>
 </body>
 </html>
