--- a/Dartboard.GUI/Web/index.html
+++ b/Dartboard.GUI/Web/index.html
@@ -1,27 +1,36 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+        <style>
+            html, body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
 
-        img {
-            padding: 0;
-            display: block;
-            margin: 0 auto;
-            max-height: 100%;
-            max-width: 100%;
-            height: 100vh;
-        }
-    </style>
-</head>
-<body>
-    <img src="http://129.25.217.182:8081/?action=stream_0"/>
-</body>
+            img {
+                padding: 0;
+                display: block;
+                margin: 0 auto;
+                max-height: 100%;
+                max-width: 100%;
+                height: 100vh;
+            }
+		
+            #secondary {
+                width: 640px;
+                height: 480px;
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
+        </style>
+    </head>
+    <body>
+        <img id="primary" src="http://129.25.217.182:8080/?action=stream_1" />
+        <img id="secondary" src="http://129.25.217.182:8080/?action=stream_0"/>
+    </body>
 </html>
